# strace-parser

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs
benches/: strace_parse.rs
parser/: Cargo.toml  build.rs
parser/src/: directories.rs  exec.rs  file_data.rs  histogram.rs  io_data.rs  lib.rs  parser.rs  pid_summary.rs  pid_tree.rs  session_summary.rs  sort_by.rs  syscall_data.rs  syscall_stats.rs  time.rs
src/: check_flags.rs  cli.rs  file_data.rs  histogram.rs  io.rs  main.rs  parser.rs  pid_summary.rs  real_time.rs  session_summary.rs  sort_by.rs  syscall_data.rs  syscall_stats.rs
strace-parse/: Cargo.toml
strace-parse/src/: check_flags.rs  exec.rs  file_data.rs  io.rs  lib.rs  parser.rs  pid_summary.rs  session_summary.rs  sort_by.rs  syscall_data.rs  time.rs
