[package]
name = "strace-parser"
version = "0.5.1"
authors = ["Will Chandler <wchandler@gitlab.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = "0.4"
clap = "2.33.0"
memmap = "0.7"
strace-parse = { path = "strace-parse" }

[dev-dependencies]
criterion = "0.2"
rayon = "1.1"

[build-dependencies]
clap = "2.33.0"
strace-parse = { path = "strace-parse" }

[workspace]

[[bench]]
name = "strace_parse"
harness = false

[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "abort"

[features]
nightly = []
