[package]
name = "strace-parser"
version = "0.5.2"
authors = ["Will Chandler <wchandler@gitlab.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
memmap = "0.7.0"
strace-parse = { path = "strace-parse" }

# It's a pain to get jemalloc working on musl
[target.'cfg(not(target_env = "musl"))'.dependencies]
jemallocator = "0.3.2"

# Can't use criterion on musl as it uses proc macros
[target.'cfg(not(target_env = "musl"))'.dev-dependencies]
criterion = "0.3.1"
rayon = "1.3.0"

[build-dependencies]
clap = "2.33.0"
strace-parse = { path = "strace-parse" }

[workspace]

[[bench]]
name = "strace_parse"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[features]
nightly = []
