[package]
name = "strace-parser"
version = "0.6.3"
authors = ["Will Chandler <wchandler@gitlab.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
bstr = "0.2.14"
chrono = "0.4.11"
clap = "2.33.1"
memmap = "0.7.0"
parser = { path = "parser" }
jemallocator = "0.3.2"

[dev-dependencies]
criterion = "0.3.2"
rayon = "1.3.1"

[build-dependencies]
clap = "2.33.1"
parser = { path = "parser" }

[workspace]
members = [ "parser" ]

[[bench]]
name = "strace_parse"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
